# ELEC-4010K

devel/: .catkin  .rosinstall  setup.sh
devel/include/demo/: addTwoNumResponse.h
devel/lib/ball_follower/: ball_follower_node
devel/lib/flip_image/: flip_image_node
devel/lib/image_recognition/: image_recognition_node
devel/lib/pkgconfig/: ball_follower.pc  demo.pc  flip_image.pc  image_recognition.pc  vrep_ros_interface.pc
devel/share/ball_follower/cmake/: ball_followerConfig.cmake
devel/share/demo/cmake/: demo-msg-paths.cmake  demoConfig.cmake
devel/share/flip_image/cmake/: flip_imageConfig.cmake
devel/share/image_recognition/cmake/: image_recognitionConfig.cmake
devel/share/vrep_ros_interface/cmake/: vrep_ros_interfaceConfig.cmake
install/: _setup_util.py
install/include/demo/: addTwoNum.h  addTwoNumRequest.h
install/lib/pkgconfig/: demo.pc
install/lib/python2.7/dist-packages/demo/srv/: __init__.py  _addTwoNum.py
install/share/common-lisp/ros/demo/srv/: _package.lisp  addTwoNum.lisp  demo-srv.asd
install/share/demo/: package.xml
install/share/demo/cmake/: demo-msg-paths.cmake  demoConfig.cmake
install/share/gennodejs/ros/demo/srv/: _index.js  addTwoNum.js
install/share/roseus/ros/demo/: manifest.l
install/share/roseus/ros/demo/srv/: addTwoNum.l
src/image_recognition/src/: image_recognition_node.cpp
