<?xml version="1.0"?>
<package>
	<name>demo</name>
	<version>0.0.1</version>
	<description>The demo package for ELEC4010K</description>
	<maintainer email="qinghai.liao@connect.ust.hk">Nick.Liao</maintainer>
	<license>MIT</license>

    <!--<url type="website">https://ram-lab.com</url>-->

	<buildtool_depend>catkin</buildtool_depend>

	<!-- Use build_depend for packages you need at compile time: -->
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<!-- Use run_depend for packages you need at runtime: -->
	<run_depend>roscpp</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>message_generation</run_depend>

		<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
